accordian container spacing fix

--- a/src/Faq/FaqMain.css
+++ b/src/Faq/FaqMain.css
@@ -3,14 +3,14 @@
   margin: 0 auto;
 
   max-width: 144rem;
-  margin-top: 23rem;
+  margin-top: 18rem;
 }
 
 .FaqMain {
   display: flex;
   /* align-items: center; */
   gap: 6rem;
-  padding: 4rem 14rem;
+  padding: 0 14rem;
 }
 
 .FaqMain-text-container {
